Updated Public ports + docker php version

--- a/.env.dist
+++ b/.env.dist
@@ -6,3 +6,7 @@ MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=mydb
 MYSQL_USER=user
 MYSQL_PASSWORD=userpass
+
+# Public Ports
+PUBLIC_WEBSERVER_PORT=8090
+PUBLIC_ELK_PORT=8091
