--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     nginx:
         build: nginx
         ports:
-            - 80:80
+            - "${PUBLIC_WEBSERVER_PORT}:80"
         volumes_from:
             - php
         volumes:
@@ -26,7 +26,7 @@ services:
     elk:
         image: willdurand/elk
         ports:
-            - 81:80
+            - "${PUBLIC_ELK_PORT}:80"
         volumes:
             - ./elk/logstash:/etc/logstash
             - ./elk/logstash/patterns:/opt/logstash/patterns
