--- a/php7-fpm/Dockerfile
+++ b/php7-fpm/Dockerfile
@@ -1,7 +1,7 @@
 # See https://github.com/docker-library/php/blob/4677ca134fe48d20c820a19becb99198824d78e3/7.0/fpm/Dockerfile
-FROM php:7.0-fpm
+FROM php:7-fpm
 
-MAINTAINER Maxence POUTORD <maxence.poutord@gmail.com>
+MAINTAINER Sascha SCHUH <github@schuh-net.de>
 
 RUN apt-get update && apt-get install -y \
     git \
