Added external port for DB in environment

--- a/.env.dist
+++ b/.env.dist
@@ -8,5 +8,6 @@ MYSQL_USER=user
 MYSQL_PASSWORD=userpass
 
 # Public Ports
-PUBLIC_WEBSERVER_PORT=8090
-PUBLIC_ELK_PORT=8091
+EXTERNAL_WEBSERVER_PORT=8090
+EXTERNAL_DB_PORT=3308
+EXTERNAL_ELK_PORT=8091
