--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         image: mysql
         volumes:
             - "./.data/db:/var/lib/mysql"
+        ports:
+            - "${EXTERNAL_DB_PORT}:3306"
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
             MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -18,7 +20,7 @@ services:
     nginx:
         build: nginx
         ports:
-            - "${PUBLIC_WEBSERVER_PORT}:80"
+            - "${EXTERNAL_WEBSERVER_PORT}:80"
         volumes_from:
             - php
         volumes:
@@ -26,7 +28,7 @@ services:
     elk:
         image: willdurand/elk
         ports:
-            - "${PUBLIC_ELK_PORT}:80"
+            - "${EXTERNAL_ELK_PORT}:80"
         volumes:
             - ./elk/logstash:/etc/logstash
             - ./elk/logstash/patterns:/opt/logstash/patterns
