--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,8 @@
 # Symfony application's path (absolute or relative)
 SYMFONY_APP_PATH=../path/to/symfony/folder
 
+HOST_IP_ADDRESS=192.168.178.30
+
 # MySQL
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=mydb
