--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ./logs/symfony:/var/www/symfony/app/logs
+        environment:
+            XDEBUG_CONFIG: remote_host=${HOST_IP_ADDRESS}
     nginx:
         build: nginx
         ports:
